<resources>
    <string name="app_name">WeatherApp</string>
    
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="enter_city_name">Enter city name</string>
    
    <string name="temperature">Temperature (°C)</string>
    <string name="city_type">City type</string>
    <string name="average">Average</string>
    
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    
    <string name="celsius">°C</string>
    <string name="Fahrenheit">°F</string>
    <string name="Kelvin">K</string>
    
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>

    <string-array name="city_types">
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>
</resources>