<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.add.AddFragment">

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/enter_city_name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCityType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/city_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCity">

        <AutoCompleteTextView
            android:id="@+id/actvCityType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTemperature" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_layout_bg"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCityType">

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWinter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/winter"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTemperature" />

        <EditText
            android:id="@+id/etDec"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:hint="@string/december"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvWinter"
            app:layout_constraintStart_toStartOf="@+id/tvWinter"
            app:layout_constraintTop_toTopOf="@+id/tvWinter" />

        <EditText
            android:id="@+id/etJan"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/january"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etDec"
            app:layout_constraintTop_toTopOf="@+id/etDec" />

        <EditText
            android:id="@+id/etFeb"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/february"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etJan"
            app:layout_constraintTop_toTopOf="@id/etJan" />


        <TextView
            android:id="@+id/tvSpring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spring"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvWinter"
            app:layout_constraintTop_toBottomOf="@+id/tvWinter" />

        <EditText
            android:id="@+id/etMar"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:hint="@string/march"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSpring"
            app:layout_constraintStart_toStartOf="@+id/tvSpring"
            app:layout_constraintTop_toTopOf="@+id/tvSpring" />

        <EditText
            android:id="@+id/etApr"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/april"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etMar"
            app:layout_constraintTop_toTopOf="@+id/etMar" />

        <EditText
            android:id="@+id/etMay"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/may"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etApr"
            app:layout_constraintTop_toTopOf="@+id/etApr" />


        <TextView
            android:id="@+id/tvSummer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/summer"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvSpring"
            app:layout_constraintTop_toBottomOf="@+id/tvSpring" />

        <EditText
            android:id="@+id/etJun"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:hint="@string/june"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSummer"
            app:layout_constraintStart_toStartOf="@+id/tvSummer"
            app:layout_constraintTop_toTopOf="@+id/tvSummer" />

        <EditText
            android:id="@+id/etJul"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/july"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etJun"
            app:layout_constraintTop_toTopOf="@+id/etJun" />

        <EditText
            android:id="@+id/etAug"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/august"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etJul"
            app:layout_constraintTop_toTopOf="@+id/etJul" />


        <TextView
            android:id="@+id/tvAutumn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/autumn"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvSummer"
            app:layout_constraintTop_toBottomOf="@+id/tvSummer" />

        <EditText
            android:id="@+id/etSep"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:hint="@string/september"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAutumn"
            app:layout_constraintStart_toStartOf="@+id/tvAutumn"
            app:layout_constraintTop_toTopOf="@+id/tvAutumn" />

        <EditText
            android:id="@+id/etOct"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/october"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etSep"
            app:layout_constraintTop_toTopOf="@+id/etSep" />

        <EditText
            android:id="@+id/etNov"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/november"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/etOct"
            app:layout_constraintTop_toTopOf="@+id/etOct" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>